--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,9 @@
-
 .player {
     width: 80%;
     margin: 40px auto;
 }
 
-video {
+.player__video {
     width: 100%;
 }
 
@@ -15,6 +14,14 @@ video {
     background-color: #f0f0f0;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.toggle {
+    font-size: 18px;
+    cursor: pointer;
+    border: none;
+    background-color: transparent;
+    margin: 0 10px;
 }
 
 .progress {
@@ -32,22 +39,5 @@ video {
     border-radius: 5px;
 }
 
-.player__button {
-    font-size: 18px;
-    cursor: pointer;
-    border: none;
-    background-color: transparent;
-}
 
-.skip-button {
-    font-size: 14px;
-    cursor: pointer;
-    border: none;
-    background-color: transparent;
-    margin: 0 10px;
-}
 
-label {
-    font-size: 14px;
-    margin: 0 10px;
-}
