--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 .player {
     width: 80%;
     margin: 40px auto;
@@ -39,5 +40,4 @@
     border-radius: 5px;
 }
 
-
-
+https://www.w3schools.com/html/mov_bbb.mp4
